# music-library-sanitizer

./: .env.example  .gitignore  IDEAS.md  pyproject.toml  pytest.ini
.github/workflows/: e2e.yml
_bmad-output/: architecture.md  bmm-workflow-status.yaml  epics.md  implementation-readiness-report-2025-12-22.md  prd.md  quality-gate.yaml  test-design-system.md  traceability-matrix.md
_bmad-output/analysis/: brainstorming-session-2025-12-19T170840.md  product-brief-music-library-sanitzer-2025-12-22.md
_bmad-output/implementation-artifacts/: 1-1-set-up-initial-project-from-starter-template-uv-typer.md  1-2-load-config-file-and-apply-cli-overrides.md  1-3-resolve-playlist-by-stable-id-and-preflight-display.md  1-4-human-readable-progress-and-run-summary.md  1-5-exit-code-semantics-for-scripting.md  2-1-build-a-deterministic-write-plan-from-inputs.md  2-2-dry-run-mode-shows-intended-changes-without-writing.md  2-3-idempotency-rules-prevent-cue-thrashing-on-reruns.md  2-4-regeneration-updates-only-tool-created-cues-when-needed.md  3-1-enforce-fail-closed-preconditions-before-any-write.md  3-2-create-a-pre-write-backup-for-write-runs.md  3-3-backup-retention-keeps-the-50-most-recent-backups.md  3-4-list-available-backups.md  3-5-restore-from-backup-and-report-verification.md  4-1-read-current-hot-cues-for-targeted-tracks.md  epic-1-retro-2025-12-23.md  sprint-status.yaml  validation-report-2025-12-23-135656.md  validation-report-2025-12-23_10-03-32.md  (+5 more)
docs/: ci-secrets-checklist.md  ci.md
scripts/: ci-local.sh  test-changed.sh
tests/: README.md  conftest.py
(+42 files in other folders)
